--- a/style.css
+++ b/style.css
@@ -29,13 +29,13 @@ body {
 
 #nav ul {
     position: relative;
-    display: block;
-    margin-left: 30%;
-    margin-right: auto;
-    margin-top: 80%;
-    width: 70%;
-    padding-left: 0;
     overflow: visible;
+    display: block;
+    padding: 0;
+    width: 100px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #nav ul li {
