--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     display: block;
     padding: 0;
     width: 100px;
+    height: 350px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -67,18 +68,21 @@ body {
 /* --------------------- globe ------------------------ */
 
 #globus {
+    position: absolute;
     z-index: 1;
-    width: 35%;
-    margin-left: 40%;
-    margin-top: 8%;
+    height: 500px;
+    width: 100px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 /* ---------------------- content ----------------------- */
 
 #content {
+    position: absolute;
     z-index: -1;
     width: 80%;
     height: 100%;
-    position: absolute;
     top: 0;
     left: 20%;
 }
