--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     bottom: 0;
     margin: 0;
 }
-/* --------------------- NAV ------------------------- */
+/* --------------------- nav ------------------------- */
 
 #nav {
     width: 20%;
@@ -34,7 +34,7 @@ body {
     overflow: visible;
     display: block;
     padding: 0;
-    width: 100px;
+    width: 120px;
     height: 350px;
     top: 50%;
     left: 50%;
@@ -56,6 +56,7 @@ body {
 
 #nav ul li:not(:first-child):hover {
     border-left: 30px solid #d2b115;
+    cursor: pointer;
 }
 
 #nav ul li:first-child {
@@ -64,17 +65,19 @@ body {
 
 #nav ul li:first-child:hover {
     transform: scale(1.055);
+    cursor: pointer;
 }
-/* --------------------- globe ------------------------ */
 
-#globus {
+#nav p {
+    color: #666666;
     position: absolute;
-    z-index: 1;
-    height: 500px;
-    width: 100px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    bottom: 0;
+    left: 30%;
+    right: 35%;
+}
+
+#nav p:hover {
+    cursor: pointer;
 }
 /* ---------------------- content ----------------------- */
 
@@ -92,10 +95,10 @@ body {
     height: 33.42%;
     margin-top: -0.4%;
 }
-/* ------------------------- kontakt ------------------------ */
 /* --------------------------- kontakt ---------------------------- */
 
-#kontakt img {
+#kontakt img,
+#portfolio_hg {
     height: inherit;
     width: 100%;
     position: absolute;
@@ -116,7 +119,7 @@ body {
 #kontakt form {
     margin-left: 30%;
     width: 40%;
-    margin-top: 12%;
+    margin-top: 10%;
     background-color: white;
     padding-top: 1%;
     padding-bottom: 1%;
@@ -165,4 +168,36 @@ body {
     width: 50%;
     color: white;
     background-color: #333333;
+    background-repeat: no-repeat;
+}
+/* --------------------------- portfolio ---------------------------- */
+
+#portfolio {
+    z-index: 1;
+    position: absolute;
+    left: 20%;
+    width: 80%;
+    height: 100%;
+    background-color: #d2b115;
+    display: flex;
+}
+
+#portfolio #links {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    margin-bottom: 15%;
+}
+
+#portfolio #links div {
+    width: 31%;
+    height: 100%;
+    display: inline-block;
+    margin: 0.5%;
+}
+
+#portfolio #links div img {
+    width: 100%;
+    height: inherit;
 }
