--- a/style.css
+++ b/style.css
@@ -98,14 +98,16 @@ body {
 /* --------------------------- kontakt ---------------------------- */
 
 #kontakt img,
-#portfolio_hg {
+#portfolio_hg,
+#ueberuns_hg {
     height: inherit;
     width: 100%;
     position: absolute;
     z-index: -1;
 }
 
-#kontakt {
+#kontakt,
+#ueberuns {
     z-index: 1;
     background-color: #d2b115;
     width: 80%;
@@ -178,7 +180,6 @@ body {
     left: 20%;
     width: 80%;
     height: 100%;
-    background-color: #d2b115;
     display: flex;
 }
 
@@ -200,4 +201,12 @@ body {
 #portfolio #links div img {
     width: 100%;
     height: inherit;
+}
+/* --------------------------- Ueber Uns -------------------------------*/
+
+#ueberuns #logo_hg {
+    height: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
