--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     top: 0;
     bottom: 0;
     margin: 0;
+    overflow: hidden;
 }
 /* --------------------- nav ------------------------- */
 
@@ -38,6 +39,8 @@ body {
     height: 350px;
     top: 50%;
     left: 50%;
+    -ms-transform: translate(-50%, -50%); /* IE 9 */
+   	-webkit-transform: translate(-50%, -50%); /* Safari */
     transform: translate(-50%, -50%);
 }
 
@@ -74,7 +77,9 @@ body {
     width: 120px;
     bottom: 0;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -ms-transform: translateX(-50%, -50%); /* IE 9 */
+   	-webkit-transform: translateX(-50%, -50%); /* Safari */
+    transform: translateX(-50%);
 }
 
 #nav p:hover {
@@ -85,25 +90,17 @@ body {
 #home {
     position: absolute;
     z-index: -1;
-    width: 80%;
+    width: 100%;
     height: 100%;
     top: 0;
-    left: 20%;
 }
 
 #home img {
     width: 100%;
-    height: 33.42%;
+    height: 33.62%;
     margin-top: -0.4%;
 }
-/* --------------------------- kontakt ---------------------------- */
 
-#hg {
-    height: inherit;
-    width: 100%;
-    position: absolute;
-    z-index: -1;
-}
 #content{
     z-index: -1;
     width: 80%;
@@ -111,6 +108,13 @@ body {
     position: absolute;
     left: 20%;
     top: 0;
+}
+
+#hg {
+    height: inherit;
+    width: 100%;
+    position: absolute;
+    z-index: -1;
 }
 
 #kontakt,
@@ -121,10 +125,16 @@ body {
     position: absolute;
 }
 
+/* --------------------------- kontakt ---------------------------- */
+
 #kontakt form {
-    margin-left: 30%;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%); /* IE 9 */
+   	-webkit-transform: translate(-50%, -50%); /* Safari */
+    transform: translate(-50%, -50%);
     width: 40%;
-    margin-top: 10%;
     background-color: white;
     padding-top: 1%;
     padding-bottom: 1%;
